@@ -185,7 +185,7 @@ class MetaReleaseCore(object):
         while step_result:
             if index_tag.Section.has_key("Dist"):
                 name = index_tag.Section["Dist"]
-                logging.debug("found distro name: '%s'" % name)
+                self._debug("found distro name: '%s'" % name)
                 rawdate = index_tag.Section["Date"]
                 date = time.mktime(rfc822.parsedate(rawdate))
                 supported = int(index_tag.Section["Supported"])
@@ -215,7 +215,7 @@ class MetaReleaseCore(object):
         # information. if not, we assume that we run on something not
         # supported and silently return
         if current_dist is None:
-            logging.debug("current dist not found in meta-release file\n")
+            self._debug("current dist not found in meta-release file\n")
             return False
 
         # then see what we can upgrade to 
@@ -287,7 +287,12 @@ class MetaReleaseCore(object):
         # now check the information we have
         if self.metarelease_information != None:
             self._debug("have self.metarelease_information")
-            self.parse()
+            try:
+                self.parse()
+            except:
+                logging.exception("parse failed for '%s'" % self.METARELEASE_FILE)
+                # no use keeping a broken file around
+                os.remove(self.METARELEASE_FILE)
         else:
             self._debug("NO self.metarelease_information")
         self.downloading = False
